--- a/src/app/components/third/third.component.html
+++ b/src/app/components/third/third.component.html
@@ -1,6 +1,17 @@
-<p>third works!</p>
-<mat-select>
-  @for (food of posts$ | asnyc; track food) {
-  <mat-option [value]="food.value">{{ food.viewValue }}</mat-option>
+<mat-select
+  [formControl]="selectControl"
+  class="block w-full px-3 py-2 mt-1 text-sm bg-white border rounded-md shadow-sm border-slate-300 placeholder-slate-400 focus:outline-none focus:border-sky-500 focus:ring-1 focus:ring-sky-500"
+>
+  @for (food of posts$ | async; track food) {
+  <mat-option [value]="food.id">{{ food.title }}</mat-option>
   }
 </mat-select>
+
+<div class="flex flex-col gap-4 my-4">
+  @for(comment of comments$ | async; track comment.id){
+  <div class="p-2 border rounded">
+    <div class="pb-3 font-medium">{{ comment.name }}</div>
+    <div class="text-sm italic font-light">{{ comment.body }}</div>
+  </div>
+  }
+</div>
