--- a/src/app/components/first/first.component.html
+++ b/src/app/components/first/first.component.html
@@ -4,24 +4,24 @@
       type="text"
       [(ngModel)]="searchText"
       placeholder="Search"
-      class="mt-1 block w-full px-3 py-2 bg-white border border-slate-300 rounded-md text-sm shadow-sm placeholder-slate-400 focus:outline-none focus:border-sky-500 focus:ring-1 focus:ring-sky-500"
+      class="block w-full px-3 py-2 mt-1 text-sm bg-white border rounded-md shadow-sm border-slate-300 placeholder-slate-400 focus:outline-none focus:border-sky-500 focus:ring-1 focus:ring-sky-500"
     />
   </div>
   <div>
-    <table class="table-fixed w-full">
+    <table class="w-full table-fixed">
       <thead>
         <tr>
-          <th>Name</th>
-          <th>Email</th>
-          <th>User Name</th>
+          <th class="py-2 pl-2 border">Name</th>
+          <th class="py-2 pl-2 border">Email</th>
+          <th class="py-2 pl-2 border">User Name</th>
         </tr>
       </thead>
       <tbody>
         @for(user of (users$ | async) | filter:searchText; track user.id){
         <tr>
-          <td>{{ user.name }}</td>
-          <td>{{ user.email }}</td>
-          <td>{{ user.username }}</td>
+          <td class="py-2 pl-2 border">{{ user.name }}</td>
+          <td class="py-2 pl-2 border">{{ user.email }}</td>
+          <td class="py-2 pl-2 border">{{ user.username }}</td>
         </tr>
         }@empty {
         <tr>
