--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="mx-40 mt-4 mat-elevation-z4 rounded">
+<div class="mx-4 mt-4 rounded mat-elevation-z4">
   <mat-tab-group [selectedIndex]="0" (selectedTabChange)="tabChange($event)">
     @for(tab of tabs; track tab){
     <mat-tab [label]="tab.id"></mat-tab>
