--- a/src/app/components/fourth/fourth.component.html
+++ b/src/app/components/fourth/fourth.component.html
@@ -1,4 +1,4 @@
-<div class="contrainer">
+<div class="container">
   <div class="left-top"></div>
   <div class="right-top"></div>
   <div class="center"></div>
