--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="mx-4 mt-4 rounded mat-elevation-z4">
-  <mat-tab-group [selectedIndex]="0" (selectedTabChange)="tabChange($event)">
+  <mat-tab-group [selectedIndex]="selectedTabIndex" (selectedTabChange)="tabChange($event)">
     @for(tab of tabs; track tab){
     <mat-tab [label]="tab.id"></mat-tab>
     }
